Writing apis.yml

--- a/apis.yml
+++ b/apis.yml
@@ -5,13 +5,13 @@ apis:
   - aid: avalara:avalara
     name: Avalara
     tags:
-      - API
+      - Taxes
     humanURL: ' https://developer.avalara.com/'
     properties:
       - url: ' https://developer.avalara.com/'
         type: Documentation
-      - type: OpenAPI
-        url: properties/avalara-openapi.yml
+      - url: properties/avalara-openapi.yml
+        type: OpenAPI
     description: >-
       Automate compliance with Avalara MCP servers for AI-driven tax workflows
       and APIs. Have your agent call our agent. 
@@ -159,23 +159,23 @@ common:
     name: Avalara Legal Center
     type: Compliance
     description: 'null'
-  - name: LinkedIn
-    url: https://www.linkedin.com/company/avalara/
+  - url: https://www.linkedin.com/company/avalara/
+    name: LinkedIn
     type: LinkedIn
-  - name: YouTube
-    url: https://www.youtube.com/c/Avalara
+  - url: https://www.youtube.com/c/Avalara
+    name: YouTube
     type: YouTube
-  - name: Postman Workspace
-    url: https://www.postman.com/api-evangelist/avalara/overview
+  - url: https://www.postman.com/api-evangelist/avalara/overview
+    name: Postman Workspace
     type: PostmanWorkspace
-  - name: GitHub Organization
-    url: https://github.com/Avalara
+  - url: https://github.com/Avalara
+    name: GitHub Organization
     type: GitHubOrganization
-  - name: Swagger
-    url: https://github.com/Avalara/Swagger
+  - url: https://github.com/Avalara/Swagger
+    name: Swagger
     type: Swagger
 created: '2025-11-19'
-modified: '2025-11-20'
+modified: '2025-12-19'
 position: Consumer
 description: >-
   Automate compliance with Avalara MCP servers for AI-driven tax workflows and
