--- a/apis.yml
+++ b/apis.yml
@@ -174,6 +174,14 @@ common:
   - url: https://github.com/Avalara/Swagger
     name: Swagger
     type: Swagger
+  - name: AI Agents | Avalara Developer
+    description: 'null'
+    url: https://developer.avalara.com/avi-agent/
+    type: Copilot
+  - name: Search or Browse all Avalara Partner Integrations
+    description: 'null'
+    url: https://www.avalara.com/us/en/products/integrations-browse-all.html
+    type: Integrations
 created: '2025-11-19'
 modified: '2025-12-19'
 position: Consumer
