API Evangelist Update

--- a/apis.yml
+++ b/apis.yml
@@ -174,20 +174,20 @@ common:
   - url: https://github.com/Avalara/Swagger
     name: Swagger
     type: Swagger
-  - name: AI Agents | Avalara Developer
-    description: 'null'
-    url: https://developer.avalara.com/avi-agent/
+  - url: https://developer.avalara.com/avi-agent/
+    name: AI Agents | Avalara Developer
     type: Copilot
-  - name: Search or Browse all Avalara Partner Integrations
     description: 'null'
-    url: https://www.avalara.com/us/en/products/integrations-browse-all.html
+  - url: https://www.avalara.com/us/en/products/integrations-browse-all.html
+    name: Search or Browse all Avalara Partner Integrations
     type: Integrations
+    description: 'null'
 created: '2025-11-19'
-modified: '2025-12-19'
+modified: '2025-12-31'
 position: Consuming
 description: >-
-  3:32 PMAvalara is a tax compliance software company that automates sales tax,
-  VAT, and other transaction taxes for businesses. It calculates the correct tax
+  Avalara is a tax compliance software company that automates sales tax, VAT,
+  and other transaction taxes for businesses. It calculates the correct tax
   rates for each transaction based on location and product type across thousands
   of jurisdictions, then handles tax return filing and compliance monitoring.
   Businesses use it because sales tax rules are extremely complex and constantly
