--- a/apis.yml
+++ b/apis.yml
@@ -13,15 +13,18 @@ apis:
     description: >-
       Automate compliance with Avalara MCP servers for AI-driven tax workflows
       and APIs. Have your agent call our agent. 
-  - name: AvaTax APIs
+  - aid: undefined:avatax-apis
+    name: AvaTax APIs
+    humanURL: https://developer.avalara.com/api-reference/avatax/rest/v2/
     description: >-
       The AvaTax API is a set of application programming interfaces provided by
       Avalara that allows businesses to integrate automated, real-time sales and
       use tax, VAT, and GST calculations directly into their own software
       applications. This allows for seamless and accurate tax compliance for
       every transaction, regardless of jurisdiction or product type. 
-    humanURL: https://developer.avalara.com/api-reference/avatax/rest/v2/
-    aid: undefined:avatax-apis
+    properties:
+      - url: https://developer.avalara.com/api-reference/avatax/rest/v2/
+        type: Documentation
 name: Avalara
 tags:
   - Taxes
